# fraud-detection-mlops

./: .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  index.html  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
notebooks/: README.md
src/: config.py
src/api/: main.py  schemas.py
src/data/: fetch_data.py  load_data.py
src/models/: evaluate.py  train.py
src/monitoring/: drift_check.py
tests/: test_api.py  test_data.py  test_model.py
